--- a/dSFMT/speed/Makefile
+++ b/dSFMT/speed/Makefile
@@ -13,9 +13,18 @@ inline_all:sfmt4a_fastc_inline pmt_fastc_inline mt_fastc_inline
 sfmtD01_alti: sfmtD01_alti.c test_time.c  paramsD01.h
 	${CC} -o $@ sfmtD01_alti.c
 
+sfmtD11_alti: sfmtD11_alti.c test_time.c  paramsD11.h
+	${CC} -o $@ sfmtD11_alti.c
+
 #### NORMAL C ####
 sfmtD01_fastc: sfmtD01_fastc.c test_time.c paramsD01.h
 	${CC} -o $@ sfmtD01_fastc.c
+
+sfmtD11_fastc: sfmtD11_fastc.c test_time.c paramsD11.h
+	${CC} -o $@ sfmtD11_fastc.c
+
+mt19937ar_fastc: mt19937ar.c test_time2.c
+	${CC} -o $@ mt19937ar.c
 
 .c.o:
 	${CC} -c $<
