add parity check
git-svn-id: file:///Users/saito/svn-repos/sfmt/trunk@269 5d39f105-0b1f-0410-87d7-cf9e5e27ca8e

--- a/release/sfmt/Makefile
+++ b/release/sfmt/Makefile
@@ -60,6 +60,9 @@ TARGET = $(ALTI_TARGET)
 
 all:$(TARGET)
 
+test-ref32: sfmt-ref.c sfmt.h
+	${CC} -DTEST -o $@ sfmt-ref.c
+
 test-std32: test32.c sfmt19937.c sfmt19937.h Makefile
 	${CC} -o $@ test32.c
 
