initial_lung_parity_ckeck debug ok
git-svn-id: file:///Users/saito/svn-repos/sfmt/trunk@272 5d39f105-0b1f-0410-87d7-cf9e5e27ca8e

--- a/proto/Makefile
+++ b/proto/Makefile
@@ -467,6 +467,9 @@ searchP37-parity607: search-parity-vector.o sfmtP37-st.o mt19937ar.o util.o
 	${CPP} -o $@ search-parity-vector.o sfmtP37-st.o mt19937ar.o util.o \
 		${LINKOPT}
 
+testP37-parity607:test-parity.o sfmtP37-st.o util.o
+	${CPP} -o $@ test-parity.o sfmtP37-st.o util.o ${LINKOPT}
+
 test_bm521: sfmt.o test_bm.o util.o debug.o
 	${CPP} -o $@ test_bm.o sfmt.o util.o debug.o ${LINKOPT}
 
