ren zero-excess and add tools
git-svn-id: file:///Users/saito/svn-repos/sfmt/trunk@280 5d39f105-0b1f-0410-87d7-cf9e5e27ca8e

--- a/proto/Makefile
+++ b/proto/Makefile
@@ -6,10 +6,12 @@
 %521:MEXP=521
 %607:MEXP=607
 %1279:MEXP=1279
-%2281:MEXP=2281
+%2203:MEXP=2203
+%4253:MEXP=4253
+%11213:MEXP=11213
 %19937:MEXP=19937
-#%44497:MEXP=44497
-#%86243:MEXP=86243
+%44497:MEXP=44497
+%86243:MEXP=86243
 #%110503:MEXP=110503
 #%132049:MEXP=132049
 #%216091:MEXP=216091
@@ -464,6 +466,30 @@ searchX78-lung607: search-lung.o sfmtX78-st.o mt19937ar.o util.o
 	${CPP} -o $@ search-lung.o sfmtX78-st.o mt19937ar.o util.o ${LINKOPT}
 
 searchP37-parity607: search-parity-vector.o sfmtP37-st.o mt19937ar.o util.o
+	${CPP} -o $@ search-parity-vector.o sfmtP37-st.o mt19937ar.o util.o \
+		${LINKOPT}
+
+searchP37-parity2203: search-parity-vector.o sfmtP37-st.o mt19937ar.o util.o
+	${CPP} -o $@ search-parity-vector.o sfmtP37-st.o mt19937ar.o util.o \
+		${LINKOPT}
+
+searchP37-parity4253: search-parity-vector.o sfmtP37-st.o mt19937ar.o util.o
+	${CPP} -o $@ search-parity-vector.o sfmtP37-st.o mt19937ar.o util.o \
+		${LINKOPT}
+
+searchP37-parity11213: search-parity-vector.o sfmtP37-st.o mt19937ar.o util.o
+	${CPP} -o $@ search-parity-vector.o sfmtP37-st.o mt19937ar.o util.o \
+		${LINKOPT}
+
+searchP37-parity19937: search-parity-vector.o sfmtP37-st.o mt19937ar.o util.o
+	${CPP} -o $@ search-parity-vector.o sfmtP37-st.o mt19937ar.o util.o \
+		${LINKOPT}
+
+searchP37-parity44497: search-parity-vector.o sfmtP37-st.o mt19937ar.o util.o
+	${CPP} -o $@ search-parity-vector.o sfmtP37-st.o mt19937ar.o util.o \
+		${LINKOPT}
+
+searchP37-parity86243: search-parity-vector.o sfmtP37-st.o mt19937ar.o util.o
 	${CPP} -o $@ search-parity-vector.o sfmtP37-st.o mt19937ar.o util.o \
 		${LINKOPT}
 
