--- a/release/SFMTp/Makefile.me
+++ b/release/SFMTp/Makefile.me
@@ -1,8 +1,10 @@
 #for GNU make
 
-FILES = sfmt19937.h sfmt19937.c sfmt19937-big64.c sfmt19937-alti32.c \
-	sfmt19937-alti64.c sfmt19937-sse2.c test32.c test64.c check.sh \
-	sfmt19937-32.out.txt sfmt19937-64.out.txt \
+FILES = SFMTp.h SFMTp-params.h SFMTp.c SFMTp-big64.c SFMTp-alti32.c \
+	SFMTp-alti64.c SFMTp-sse2.c test32.c test64.c check.sh \
+	params607.h params2281.h params4253.h params11213.h params19937.h \
+	params44497.h params86243.h params132049.h \
+	SFMTp.19937.out.txt \
 	FILES.txt LICENSE.txt Makefile \
 	README.txt html
 VERSION = 1.0
