--- a/release/SFMTp/Makefile.me
+++ b/release/SFMTp/Makefile.me
@@ -1,12 +1,36 @@
 #for GNU make
 
-FILES = SFMTp.h SFMTp-params.h SFMTp.c SFMTp-big64.c SFMTp-alti32.c \
-	SFMTp-alti64.c SFMTp-sse2.c test32.c test64.c check.sh \
-	params607.h params2281.h params4253.h params11213.h params19937.h \
-	params44497.h params86243.h params132049.h \
+FILES = SFMTp.h \
+	SFMTp-params.h \
+	SFMTp.c \
+	SFMTp-big64.c \
+	SFMTp-alti32.c \
+	SFMTp-alti64.c \
+	SFMTp-sse2.c \
+	test32.c \
+	test64.c \
+	check.sh \
+	params607.h \
+	params2281.h \
+	params4253.h \
+	params11213.h \
+	params19937.h \
+	params44497.h \
+	params86243.h \
+	params132049.h \
+	SFMTp.607.out.txt \
+	SFMTp.2281.out.txt \
+	SFMTp.4253.out.txt \
+	SFMTp.11213.out.txt \
 	SFMTp.19937.out.txt \
-	FILES.txt LICENSE.txt Makefile \
-	README.txt html
+	SFMTp.44497.out.txt \
+	SFMTp.86243.out.txt \
+	SFMTp.132049.out.txt \
+	FILES.txt \
+	LICENSE.txt \
+	Makefile \
+	README.txt \
+	html
 VERSION = 1.0
 DIR = SFMTp-src-${VERSION}
 
