change FILES.txt and Makefile
git-svn-id: file:///Users/saito/svn-repos/sfmt/trunk@315 5d39f105-0b1f-0410-87d7-cf9e5e27ca8e

--- a/release/SFMT19937/Makefile
+++ b/release/SFMT19937/Makefile
@@ -22,10 +22,11 @@
 # using gcc 4.0 of osx.
 
 WARN = -Wmissing-prototypes -Wall
-OPTI = -O9 -finline-functions -fomit-frame-pointer -DNDEBUG 
+OPTI = -O9 -finline-functions -fomit-frame-pointer -fno-strict-aliasing -DNDEBUG 
 #STD =
 #STD = -std=c89 -pedantic
-STD = -std=c99 -pedantic
+#STD = -std=c99 -pedantic
+STD = -std=c99
 GCC = gcc $(OPTI) $(WARN) $(STD)
 STD_TARGET = test-std32 test-std64
 STD_CHECK_TARGET = check-std32 check-std64
