--- a/release/SFMT19937/Makefile
+++ b/release/SFMT19937/Makefile
@@ -4,8 +4,6 @@
 # @author Mutsuo Saito (Hiroshima University)
 # @author Makoto Matsumoto (Hiroshima University)
 #
-# @date 2007-01-10
-#
 # Copyright (C) 2006,2007 Mutsuo Saito, Makoto Matsumoto and Hiroshima
 # University. All rights reserved.
 #
@@ -21,8 +19,11 @@
 # We could comple sfmt19937-alti32.c and sfmt19937-alti64.c 
 # using gcc 4.0 of osx.
 
+SYSTEM = std_unix
+
 WARN = -Wmissing-prototypes -Wall
-OPTI = -O9 -finline-functions -fomit-frame-pointer -fno-strict-aliasing -DNDEBUG 
+OPTI = -O9 -finline-functions -fomit-frame-pointer -fno-strict-aliasing \
+	-DNDEBUG 
 #STD =
 #STD = -std=c89 -pedantic
 #STD = -std=c99 -pedantic
@@ -39,20 +40,32 @@ SSE_CHECK_TARGET = $(STD_CHECK_TARGET) check-sse32 check-sse64
 CHECK32_FILE = sfmt19937-32.out.txt
 CHECK64_FILE = sfmt19937-64.out.txt
 # ======================================
-# comment out or EDIT following settings
+# SYSTEM dependent settings
 # ======================================
 # --------------------
 # for UNIX like system
 # --------------------
+ifeq ($(SYSTEM), std_unix)
 CC = $(GCC)
 TARGET = $(STD_TARGET)
 CHECK_TARGET = $(STD_CHECK_TARGET)
+endif
 # -----------------
 # for PowerPC
 # -----------------
-#CC = $(GCC) -faltivec -maltivec -arch ppc
-#TARGET = $(ALTI_TARGET)
-#CHECK_TARGET = $(ALTI_CHECK_TARGET)
+ifeq ($(SYSTEM), ppc_osx)
+CC = $(GCC) -faltivec -maltivec -arch ppc
+TARGET = $(ALTI_TARGET)
+CHECK_TARGET = $(ALTI_CHECK_TARGET)
+endif
+# -----------------
+# for other sse2 CPU
+# -----------------
+ifeq ($(SYSTEM), sse2_unix)
+CC = $(GCC) -msse2
+TARGET = $(SSE_TARGET)
+CHECK_TARGET = $(SSE_CHECK_TARGET)
+endif
 # -----------------
 # for Pentium M
 # -----------------
@@ -64,12 +77,6 @@ CHECK_TARGET = $(STD_CHECK_TARGET)
 # for Athlon
 # -----------------
 #CC = $(GCC) -march=nocona -msse2
-#TARGET = $(SSE_TARGET)
-#CHECK_TARGET = $(SSE_CHECK_TARGET)
-# -----------------
-# for other sse2 CPU
-# -----------------
-#CC = $(GCC) -msse2
 #TARGET = $(SSE_TARGET)
 #CHECK_TARGET = $(SSE_CHECK_TARGET)
 
