--- a/release/SFMT19937/Makefile.me
+++ b/release/SFMT19937/Makefile.me
@@ -3,8 +3,9 @@
 FILES = sfmt19937.h sfmt19937.c sfmt19937-big64.c sfmt19937-alti32.c \
 	sfmt19937-alti64.c sfmt19937-sse2.c test32.c test64.c check.sh \
 	sfmt19937-32.out.txt sfmt19937-64.out.txt \
+	sample1.c sample2.c sample3.c \
 	FILES.txt LICENSE.txt Makefile \
-	README.txt html
+	CHANGE-LOG.txt README.txt html
 VERSION = 1.1
 DIR = sfmt19937src-${VERSION}
 
