real pre release
git-svn-id: file:///Users/saito/svn-repos/sfmt/trunk@333 5d39f105-0b1f-0410-87d7-cf9e5e27ca8e

--- a/release/SFMT19937/Makefile.me
+++ b/release/SFMT19937/Makefile.me
@@ -3,7 +3,7 @@
 FILES = sfmt19937.h sfmt19937.c sfmt19937-big64.c sfmt19937-alti32.c \
 	sfmt19937-alti64.c sfmt19937-sse2.c test32.c test64.c check.sh \
 	sfmt19937-32.out.txt sfmt19937-64.out.txt \
-	sample1.c sample2.c sample3.c \
+	sample1.c sample2.c sample3.c sample4.c \
 	FILES.txt LICENSE.txt Makefile \
 	CHANGE-LOG.txt README.txt html
 VERSION = 1.1
