--- a/release/SFMT19937/Makefile
+++ b/release/SFMT19937/Makefile
@@ -19,8 +19,6 @@
 # We could comple sfmt19937-alti32.c and sfmt19937-alti64.c 
 # using gcc 4.0 of osx.
 
-SYSTEM = std_unix
-
 WARN = -Wmissing-prototypes -Wall
 OPTI = -O9 -finline-functions -fomit-frame-pointer -fno-strict-aliasing \
 	-DNDEBUG 
@@ -28,7 +26,8 @@ OPTI = -O9 -finline-functions -fomit-frame-pointer -fno-strict-aliasing \
 #STD = -std=c89 -pedantic
 #STD = -std=c99 -pedantic
 STD = -std=c99
-GCC = gcc $(OPTI) $(WARN) $(STD)
+CC = gcc
+CCFLAGS = $(OPTI) $(WARN) $(STD)
 STD_TARGET = test-std32 test-std64
 STD_CHECK_TARGET = check-std32 check-std64
 BIG_TARGET = $(STD_TARGET) test-big64
@@ -45,54 +44,60 @@ CHECK64_FILE = sfmt19937-64.out.txt
 # --------------------
 # for UNIX like system
 # --------------------
-ifeq ($(SYSTEM), std_unix)
-CC = $(GCC)
-TARGET = $(STD_TARGET)
-CHECK_TARGET = $(STD_CHECK_TARGET)
-endif
+#TARGET = $(STD_TARGET)
+#CHECK_TARGET = $(STD_CHECK_TARGET)
 # -----------------
 # for PowerPC
 # -----------------
-ifeq ($(SYSTEM), ppc_osx)
-CC = $(GCC) -faltivec -maltivec -arch ppc
-TARGET = $(ALTI_TARGET)
-CHECK_TARGET = $(ALTI_CHECK_TARGET)
-endif
+#CCFLAGS = $(CCFLAGS) -faltivec -maltivec -arch ppc
+#TARGET = $(ALTI_TARGET)
+#CHECK_TARGET = $(ALTI_CHECK_TARGET)
 # -----------------
 # for other sse2 CPU
 # -----------------
-ifeq ($(SYSTEM), sse2_unix)
-CC = $(GCC) -msse2
-TARGET = $(SSE_TARGET)
-CHECK_TARGET = $(SSE_CHECK_TARGET)
-endif
+#CCFLAGS = $(CCFLAGS) -msse2
+#TARGET = $(SSE_TARGET)
+#CHECK_TARGET = $(SSE_CHECK_TARGET)
 # -----------------
 # for Pentium M
 # -----------------
-#CC = $(GCC) -march=prescott -msse2
+#CCFLAGS = $(CCFLAGS) -march=prescott -msse2
 #CC = icl /Wcheck /O3 /QxB 
 #TARGET = $(SSE_TARGET)
 #CHECK_TARGET = $(SSE_CHECK_TARGET)
 # -----------------
 # for Athlon
 # -----------------
-#CC = $(GCC) -march=nocona -msse2
+#CCFLAGS = $(CCFLAGS) -march=nocona -msse2
 #TARGET = $(SSE_TARGET)
 #CHECK_TARGET = $(SSE_CHECK_TARGET)
 
-all:${TARGET}
+.PHONY: std-check sse2-check alti-check
 
-.PHONY: check
-check:${CHECK_TARGET}
+std: ${STD_TARGET}
+
+sse2:
+	${MAKE} CCFLAGS="${CCFLAGS} -msse2" ${SSE_TARGET}
+
+alti:
+	${MAKE} CCFLAGS="${CCFLAGS} -faltivec" ${ALTI_TARGET}
+
+std-check:${STD_CHECK_TARGET}
+
+sse2-check:
+	${MAKE} CCFLAGS="${CCFLAGS} -msse2" ${SSE_CHECK_TARGET}
+
+alti-check:
+	${MAKE} CCFLAGS="${CCFLAGS} -faltivec" ${ALTI_CHECK_TARGET}
 
 test-std32: test32.c sfmt19937.c sfmt19937.h
-	${CC} -o $@ test32.c
+	${CC} ${CCFLAGS} -o $@ test32.c
 
 test-alti32: test32.c sfmt19937-alti32.c sfmt19937.h
-	${CC} -DALTIVEC=1 -o $@ test32.c
+	${CC} ${CCFLAGS} -DALTIVEC=1 -o $@ test32.c
 
 test-sse32: test32.c sfmt19937-sse2.c sfmt19937.h
-	${CC} -DSSE2=1 -o $@ test32.c
+	${CC} ${CCFLAGS} -DSSE2=1 -o $@ test32.c
 
 check-std32: test-std32
 	./check.sh test-std32 ${CHECK32_FILE}
@@ -104,16 +109,16 @@ check-sse32: test-sse32
 	./check.sh test-sse32 ${CHECK32_FILE}
 
 test-std64: test64.c sfmt19937.c sfmt19937.h
-	${CC} -o $@ test64.c
+	${CC} ${CCFLAGS} -o $@ test64.c
 
 test-big64: test64.c sfmt19937-big64.c sfmt19937.h
-	${CC} -DBIG=1 -o $@ test64.c
+	${CC} ${CCFLAGS} -DBIG=1 -o $@ test64.c
 
 test-alti64: test64.c sfmt19937-alti64.c sfmt19937.h
-	${CC} -DALTIVEC=1 -o $@ test64.c
+	${CC} ${CCFLAGS} -DALTIVEC=1 -o $@ test64.c
 
 test-sse64: test64.c sfmt19937-sse2.c sfmt19937.h
-	${CC} -DSSE2=1 -o $@ test64.c
+	${CC} ${CCFLAGS} -DSSE2=1 -o $@ test64.c
 
 check-std64: test-std64
 	./check.sh test-std64 ${CHECK64_FILE}
@@ -128,7 +133,7 @@ check-sse64: test-sse64
 	./check.sh test-sse64 ${CHECK64_FILE}
 
 .c.o:
-	${CC} -c $<
+	${CC} ${CCFLAGS} -c $<
 
 clean:
 	rm -f *.o *~
