affin check and chk-shortest debug
git-svn-id: file:///Users/saito/svn-repos/sfmt/trunk@349 5d39f105-0b1f-0410-87d7-cf9e5e27ca8e

--- a/dSFMT/proto/Makefile
+++ b/dSFMT/proto/Makefile
@@ -171,6 +171,13 @@ searchD11-parity86243: search-parity-vector.o sfmtD11-st.o mt19937ar.o util.o
 	${CPP} -o $@ search-parity-vector.o sfmtD11-st.o mt19937ar.o util.o \
 		${LINKOPT}
 
+searchD11-parity132049: search-parity-vector.o sfmtD11-st.o mt19937ar.o util.o
+	${CPP} -o $@ search-parity-vector.o sfmtD11-st.o mt19937ar.o util.o \
+		${LINKOPT}
+
+check-affin-bm607: chk-bm.o sfmtD11-afst.o util.o dsfmt-util.o
+	${CPP} -o $@ chk-bm.o sfmtD11-afst.o util.o dsfmt-util.o ${LINKOPT}
+
 .cpp.o:
 	${CPP} -c $<
 
